syntax = "proto3";

package ecoflow.energyStorageModule.proto.Yj751Sys;

message TimeInfo {
  uint32 hour = 1;

  uint32 min = 2;

  uint32 sec = 3;
}

message SelfUsedParam {
}

message TouParam {
  TimeInfo start_time = 1;

  TimeInfo end_time = 2;

  uint32 chg_dsg_mode = 3;
}

message BackupParam {
  uint32 backup_soc = 1;
}

message AppShowHeartbeatReport {
  optional uint32 proto_ver = 1;

  optional uint32 show_flag = 2;

  optional uint32 access_type = 3;

  optional sint32 wireless_4g_on = 10;

  optional sint32 wireless_4G_sta = 11;

  optional uint32 access_5p8_in_type = 12;

  optional uint32 access_5p8_out_type = 13;

  optional sint32 wireless_4g_con = 14;

  optional sint32 wirlesss_4g_err_code = 15;

  optional string sim_iccid = 16;

  optional uint32 soc = 21;

  optional uint32 bp_num = 22;

  optional uint32 pcs_type = 23;

  optional uint32 c20_chg_max_watts = 24;

  optional uint32 para_chg_max_watts = 25;

  optional uint32 remain_time = 26;

  optional uint32 sys_err_code = 27;

  optional uint32 full_combo = 28;

  optional uint32 remain_combo = 29;

  optional float watts_in_sum = 41;

  optional float watts_out_sum = 42;

  optional float out_usb1_pwr = 43;

  optional float out_usb2_pwr = 44;

  optional float out_typec1_pwr = 45;

  optional float out_typec2_pwr = 46;

  optional float out_ads_pwr = 47;

  optional float out_ac_l1_1_pwr = 48;

  optional float out_ac_l1_2_pwr = 49;

  optional float out_ac_l2_1_pwr = 50;

  optional float out_ac_l2_2_pwr = 51;

  optional float out_ac_tt_pwr = 52;

  optional float out_ac_l14_pwr = 53;

  optional float out_ac_5p8_pwr = 54;

  optional float in_ac_5p8_pwr = 55;

  optional float in_ac_c20_pwr = 56;

  optional float in_lv_mppt_pwr = 57;

  optional float in_hv_mppt_pwr = 58;

  optional float out_pr_pwr = 59;

  optional uint32 time_task_change_cnt = 100;

  optional uint32 time_task_conflict_flag = 101;

  optional uint32 chg_time_task_notice = 102;

  optional uint32 chg_time_task_type = 103;

  optional uint32 chg_time_task_index = 104;

  optional uint32 chg_time_task_mode = 105;

  optional uint32 chg_time_task_param = 106;

  optional uint32 chg_time_task_table_0 = 107;

  optional uint32 chg_time_task_table_1 = 108;

  optional uint32 chg_time_task_table_2 = 109;

  optional uint32 chg_time_task_addparam = 110;

  optional uint32 dsg_time_task_notice = 121;

  optional uint32 dsg_time_task_type = 122;

  optional uint32 dsg_time_task_index = 123;

  optional uint32 dsg_time_task_mode = 124;

  optional uint32 dsg_time_task_param = 125;

  optional uint32 dsg_time_task_table_0 = 126;

  optional uint32 dsg_time_task_table_1 = 127;

  optional uint32 dsg_time_task_table_2 = 128;

  optional uint32 dsg_time_task_addparam = 129;
}

message BackendRecordHeartbeatReport {
  optional uint32 record_flag = 1;

  optional uint32 sys_work_sta = 21;

  optional uint32 chg_reign_sta = 22;

  optional uint32 pcs_work_sta = 23;

  optional uint32 fan_state = 24;

  optional uint32 ems_work_sta = 25;

  optional uint32 c20_in_type = 41;

  optional uint32 work_5p8_mode = 42;

  optional uint32 ac_in_freq = 43;

  optional uint32 ems_max_avail_num = 44;

  optional uint32 ems_open_bms_idx = 45;

  optional uint32 ems_para_vol_min = 46;

  optional uint32 ems_para_vol_max = 47;

  optional uint32 ac_out_freq = 48;

  optional uint32 pcs_dc_err_code = 49;

  optional uint32 pcs_ac_err_code = 50;

  optional uint32 lv_pv_err_code = 51;

  optional uint32 hv_pv_err_code = 52;

  optional uint32 ads_err_code = 53;

  optional float bat_vol = 61;

  optional float bat_amp = 62;

  optional float bms_input_watts = 63;

  optional float bms_output_watts = 64;

  optional float out_usb1_vol = 65;

  optional float out_usb1_amp = 66;

  optional float out_usb2_vol = 67;

  optional float out_usb2_amp = 68;

  optional float out_typec1_vol = 69;

  optional float out_typec1_amp = 70;

  optional float out_typec2_vol = 71;

  optional float out_typec2_amp = 72;

  optional float out_ads_vol = 73;

  optional float out_ads_amp = 74;

  optional float out_ac_l1_1_vol = 75;

  optional float out_ac_l1_1_amp = 76;

  optional float out_ac_l1_2_vol = 77;

  optional float out_ac_l1_2_amp = 78;

  optional float out_ac_l2_1_vol = 79;

  optional float out_ac_l2_1_amp = 80;

  optional float out_ac_l2_2_vol = 81;

  optional float out_ac_l2_2_amp = 82;

  optional float out_ac_tt_vol = 83;

  optional float out_ac_tt_amp = 84;

  optional float out_ac_l14_vol = 85;

  optional float out_ac_l14_amp = 86;

  optional float out_ac_5p8_vol = 87;

  optional float out_ac_5p8_amp = 88;

  optional float in_ac_5p8_vol = 89;

  optional float in_ac_5p8_amp = 90;

  optional float in_ac_c20_vol = 91;

  optional float in_ac_c20_amp = 92;

  optional float in_lv_mppt_vol = 93;

  optional float in_lv_mppt_amp = 94;

  optional float in_hv_mppt_vol = 95;

  optional float in_hv_mppt_amp = 96;

  optional float pcs_dc_temp = 97;

  optional float pcs_ac_temp = 98;

  optional float mppt_lv_temp = 99;

  optional float mppt_hv_temp = 100;

  optional int32 pd_temp = 101;

  optional float ev_max_charger_cur = 102;

  optional float out_ac_l1_1_pf = 103;

  optional float out_ac_l1_2_pf = 104;

  optional float out_ac_l2_1_pf = 105;

  optional float out_ac_l2_2_pf = 106;

  optional float out_ac_tt_pf = 107;

  optional float out_ac_l14_pf = 108;

  optional float out_ac_p58_pf = 109;
}

message APPParaHeartbeatReport {
  optional uint32 sys_word_mode = 1;

  optional uint32 sys_backup_event = 2;

  optional uint32 sys_backup_soc = 3;

  optional uint32 energy_mamage_enable = 4;

  optional uint32 backup_ratio = 5;

  optional uint32 ac_xboost = 6;

  optional uint32 ac_out_freq = 7;

  optional uint32 bms_mode_set = 8;

  optional uint32 chg_max_soc = 9;

  optional uint32 dsg_min_soc = 10;

  optional uint32 ac_often_open_flg = 11;

  optional uint32 ac_often_open_min_soc = 12;

  optional uint32 chg_5p8_set_watts = 13;

  optional uint32 chg_c20_set_watts = 14;

  optional uint32 power_standby_mins = 15;

  optional uint32 screen_standby_sec = 16;

  optional uint32 dc_standby_mins = 17;

  optional uint32 ac_standby_mins = 18;

  optional uint32 solar_only_flg = 19;

  optional uint32 timezone_settype = 20;

  optional sint32 sys_timezone = 21;

  optional string sys_timezone_id = 22;

  optional uint32 bypass_dsg_en_flag = 23;

  optional uint32 ac_in_ban_flag = 24;

  optional uint32 chg_pfc_set_watts = 25;
}

message BPInfo {
  uint32 bp_no = 1;

  uint32 bp_chg_sta = 2;

  uint32 bp_soc = 3;

  float bp_pwr = 4;

  float bp_energy = 5;

  uint32 heat_time = 6;

  uint32 remain_time = 7;

  uint32 bp_soc_max = 8;

  uint32 bp_soc_min = 9;

  uint32 bp_err_code = 10;

  int32 bp_temp = 11;

  optional uint32 bp_sunnova_ban = 12;
}

message BpInfoReport {
  repeated BPInfo bp_info = 1;
}

message SysRTCSyncGet {
}

message SysRTCSync {
  uint32 sys_utc_time = 1;

  optional sint32 sys_timezone = 2;
}

message Combo4GInfoGet {
  string sim_iccid = 1;
}

message Combo4GInfoGetAck {
  uint32 is_bind = 1;

  uint32 combo_type = 2;

  uint32 month_full_combo = 3;

  uint32 day_remain_combo = 4;

  uint32 month_remain_combo = 5;

  uint32 year_remain_combo = 6;
}

message ProductNameSet {
  string product_name = 1;
}

message SetCmdResultAck {
  sint32 result = 1;
}

message ProductInfoGet {
}

message ProductInfoGetAck {
  sint32 result = 1;

  uint32 model = 2;

  uint32 soc = 3;

  string product_name = 4;
}

message FactoryReset {
  uint32 level = 1;
}

message DCSwitchSet {
  uint32 enable = 1;
}

message ACDsgSet {
  optional uint32 enable = 1;

  optional uint32 xboost = 2;

  optional uint32 out_freq = 3;

  optional uint32 out_voltage = 4;
}

message ACChgSet {
  optional uint32 chg_5p8_watts = 1;

  optional uint32 chg_c20_watts = 2;

  optional uint32 chg_pause_flag = 3;
}

message PowerStandbySet {
  uint32 power_standby_min = 1;
}

message ScreenStandbySet {
  uint32 screen_standby_sec = 1;
}

message ACStandbySet {
  uint32 ac_standby_min = 1;
}

message DCStandbySet {
  uint32 dc_standby_min = 1;
}

message ChgSocMaxSet {
  uint32 max_chg_soc = 1;
}

message DsgSocMinSet {
  uint32 min_dsg_soc = 1;
}

message BpHeatSet {
  uint32 en_bp_heat = 1;
}

message Switch4GEnable {
  uint32 en_4G_open = 1;
}

message Iot4GInfoGet {
}

message Iot4GInfoGetAck {
  sint32 enable = 1;

  sint32 usb_con = 2;

  sint32 pdp_active = 3;

  string sim_iccid = 4;

  string sim_imsi = 5;

  string modem_imei = 6;

  string modem_ver = 7;

  string network_act = 8;

  string network_sopr = 9;

  string network_nopr = 10;

  string network_band = 11;

  uint32 network_rat = 12;

  uint32 network_reg = 13;

  sint32 signal_rssi = 14;

  sint32 err_code = 15;

  sint32 signal_ico = 16;

  uint32 ip = 17;
}

message AcOftenOpenCfg {
  uint32 ac_often_open = 1;

  uint32 ac_often_open_min_soc = 2;
}

message EnergyManageSet {
  uint32 energy_manage_enable = 1;

  optional uint32 backup_ratio = 2;
}

message SolarOnlySet {
  uint32 solar_only_enable = 1;
}

message AppConnectSync {
  uint32 connect_sta = 1;
}

message SetReportInfo {
  uint32 data_type = 1;

  sint32 cycle_ms = 2;
}

message ServerSetReportInfo {
  repeated SetReportInfo set_info = 1;
}

message SystemParamGet {
  uint32 get_param_type = 1;
}

message SysRTCGet {
}

message GeneralTimetaskGet {
}

message GeneralTimeTaskCfg {
  uint32 product_type = 1;

  uint32 task_seted_number = 2;

  uint32 task_max_number = 3;

  uint32 conf_number = 4;

  repeated uint32 conf_term = 5;
}

message GeneralTimeTaskSet {
  uint32 tasks_ctrl = 1;
}

message DefineTimeTaskCfg {
  uint32 task_index = 1;

  bool is_valid = 2;

  bool is_cfg = 3;

  bool is_enable = 4;

  uint32 conflict_flag = 5;

  uint32 type = 6;

  uint32 time_mode = 7;

  uint32 time_param = 8;

  repeated uint32 time_table = 9;

  optional uint32 task_param = 10;
}

message DefineTimeTaskSetAck {
  uint32 type = 1;

  uint32 task_index = 2;

  uint32 sta = 3;
}

message DefineTimeTaskGet {
  uint32 type = 1;

  uint32 task_index = 2;
}

message ALLDefineTimeTaskGet {
}

message ALLDefineTimeTaskGetAck {
  repeated DefineTimeTaskCfg time_task_cfg = 1;
}

message FastSlowChgSet {
  uint32 fast_slow_set = 1;
}

message PowerOffSet {
  uint32 power_off_set = 1;
}

message FanLevelSet {
  uint32 ext_fan_level = 1;

  uint32 int_fan_level = 2;
}

message CurrentNode {
  string parentSn = 1;

  string currentSn = 2;

  uint32 currentSnIdx = 3;

  optional uint32 extIdx = 4;
}

message PrStateSet {
  optional uint32 set_self = 1;

  optional uint32 set_para = 2;
}

message SysUTCRequest {
}

message SysUTCRequestACK {
  uint32 sys_utc_time = 1;
}

message SysRTCInfoGet {
}

message SysRTCInfoGetACK {
  uint32 sys_utc_time = 1;

  sint32 sys_timezone = 2;

  uint32 time_type = 3;

  string timezone_id = 4;

  optional uint32 set_timezone_type = 5;
}

message SysUTCSync {
  uint32 sys_utc_time = 1;
}

message SysTimezoneSync {
  sint32 sys_timezone = 1;

  optional uint32 set_timezone_type = 2;
}

message SysTimezoneIDSync {
  string timezone_id = 1;
}

message InstallmentPaymentServeBelone {
  SERVE_MIDDLEMEN serve_middlemen = 1;

  INSTALLMENT_PAYMENT_OVERDUE_LIMIT installment_payment_overdue_limit = 2;

  INSTALLMENT_PAYMENT_STATE installment_payment_state = 3;
}

message InstallmentPaymentServe {
  INSTALLMENT_PAYMENT_STATE installment_payment_state = 1;

  uint32 installment_payment_start_utc_time = 2;

  uint32 installment_payment_overdue_limit_utc_time = 3;
}

message ResetMiddlemenDeliverySetting {
  SERVE_MIDDLEMEN serve_middlemen = 1;
}

message CfgTouStrategy {
  repeated uint32 tou_hours_strategy = 1;

  uint32 tou_gird_chg_stop_soc = 2;
}

message CfgGridPrice {
  uint32 timestamp = 1;
}

message CfgEnergyStrategyOperateMode {
  bool operate_self_powered_open = 1;

  bool operate_scheduled_open = 2;

  bool operate_tou_mode_open = 3;

  bool operate_intelligent_schedule_mode_open = 4;
}

message TimeTaskParamDetail {
  TIME_TASK_DETAIL_TYPE type = 1;

  float val = 2;
}

message TimeTaskItemV2 {
  uint32 task_index = 1;

  bool is_cfg = 2;

  bool is_enable = 3;

  uint32 conflict_flag = 4;

  TIME_TASK_MODE time_mode = 5;

  uint32 time_param = 6;

  uint32 time_table = 7;

  TIME_TASK_TYPE task_type = 8;

  uint32 task_param = 9;

  repeated TimeTaskParamDetail task_param_detail = 10;
}

message TimeTaskItemV2List {
  repeated TimeTaskItemV2 time_task = 1;
}

message ResvInfo {
  repeated uint32 resv_info = 1;
}

message CfgStormPattern {
  bool storm_pattern_enable = 1;

  bool storm_pattern_open_flag = 2;

  uint32 storm_pattern_end_time = 3;
}

message ReqSmartCharge {
  uint32 target_external_chg_wh = 1;

  uint32 curr_storage_wh = 2;

  uint32 accumulated_external_chg_wh = 3;

  uint32 target_external_chg_finsh_timestamp = 4;

  uint32 grid_chg_pow_max = 5;

  uint32 external_chg_pow_max = 6;

  string sn = 7;

  uint32 device_min_charge_rate = 8;
}

message ReqIntelligentSchedule {
  uint32 req_intelligent_schedule_state = 1;

  repeated ReqSmartCharge smart_charge_info_list = 2;
}

message GetIntelligentSchedule {
  uint32 intelligent_schedule_mode = 1;

  uint32 join_intelligent_schedule = 2;

  repeated ReqSmartCharge smart_charge_info_list = 3;
}

message CfgIntelligentScheduleMode {
  uint32 intelligent_schedule_mode = 1;

  uint32 join_intelligent_schedule = 2;
}

message TimeScheduleTaskItem {
  uint32 start_timestamp = 1;

  uint32 end_timestamp = 2;

  uint32 grid_chg_wh = 3;

  uint32 grid_dischg_wh = 4;

  uint32 chg_wh = 5;

  uint32 dischg_wh = 6;

  uint32 v2h_output_wh = 7;
}

message CfgIntelligentScheduleChannelItem {
  string sn = 1;

  repeated uint32 channel_num = 2;

  repeated uint32 cfg_turn_off = 3;
}

message CfgTimeScheduleTask {
  repeated TimeScheduleTaskItem time_schedule_task_item_list = 1;

  repeated CfgIntelligentScheduleChannelItem intelligent_schedule_channel_item_list = 2;
}

message ConfigWrite {
  optional uint32 cfg_soc_cali = 31;

  optional uint32 cfg_ev_chg_amp_max = 35;

  optional EV_CHG_MODE cfg_ev_chg_mode = 36;

  optional uint32 cfg_ev_chg_soc_min = 37;

  optional bool cfg_ev_chg_manual_ctrl = 38;

  optional CfgTouStrategy cfg_tou_hours_strategy = 65;

  optional CfgStormPattern cfg_storm_pattern = 93;

  optional CfgGridPrice cfg_grid_price = 101;

  optional uint32 cfg_backup_reverse_soc = 102;

  optional CfgEnergyStrategyOperateMode cfg_energy_strategy_operate_mode = 106;

  optional bool cfg_installment_payment_serve_enable = 119;

  optional InstallmentPaymentServeBelone cfg_installment_payment_serve_belone = 120;

  optional InstallmentPaymentServe cfg_installment_payment_serve = 121;

  optional ResetMiddlemenDeliverySetting reset_middlemen_delivery_setting = 124;

  optional TimeTaskItemV2 cfg_time_task_v2_item = 127;

  optional bool unlock_pv_weak = 167;

  optional CfgIntelligentScheduleMode cfg_cfg_intelligent_schedule_mode = 546;

  optional CfgTimeScheduleTask cfg_cfg_time_schedule_task = 547;

  optional uint32 cfg_oil_max_charge_power = 103;
}

message ConfigWriteAck {
  uint32 action_id = 1;

  bool config_ok = 2;
}

message ConfigRead {
  repeated uint32 action_id = 1;
}

message ConfigReadAck {
  optional TimeTaskItemV2List read_time_task_v2_list = 129;

  optional GetIntelligentSchedule cfg_read_intelligent_schedule = 545;
}

message DisplayPropertyUpload {
  optional uint32 plug_in_info_pv_h_flag = 39;

  optional uint32 plug_in_info_pv_h_type = 40;

  optional float pow_get_pv_h = 35;

  optional uint32 plug_in_info_pv_l_flag = 42;

  optional uint32 plug_in_info_pv_l_type = 43;

  optional float pow_get_pv_l = 36;

  optional uint32 oil_max_charge_power = 793;

  optional uint32 plug_in_info_5p8_flag = 63;

  optional uint32 plug_in_info_5p8_type = 64;

  optional uint32 plug_in_info_5p8_detail = 65;

  optional string plug_in_info_5p8_sn = 193;

  optional uint32 plug_in_info_acp_run_state = 116;

  optional uint32 plug_in_info_acp_err_code = 117;

  optional uint32 plug_in_info_acp_firm_ver = 118;

  optional ResvInfo plug_in_info_acp_resv = 119;

  optional float cms_batt_soc = 262;

  optional uint32 cms_max_chg_soc = 270;

  optional uint32 cms_min_dsg_soc = 271;

  optional uint32 cms_batt_pow_out_max = 459;

  optional uint32 cms_batt_pow_in_max = 460;

  optional uint32 backup_reverse_soc = 461;

  optional uint32 cms_batt_full_energy = 462;

  optional bool storm_pattern_enable = 467;

  optional bool storm_pattern_open_flag = 468;

  optional uint32 storm_pattern_end_time = 469;

  optional uint32 storm_pattern_conflict_flag = 397;

  optional CfgEnergyStrategyOperateMode energy_strategy_operate_mode = 393;

  optional uint32 ev_chg_amp_max = 538;

  optional EV_CHG_MODE ev_chg_mode = 539;

  optional uint32 ev_chg_soc_min = 540;

  optional bool ev_chg_manual_ctrl = 541;

  optional uint32 ev_chg_manual_wait_reason = 1552;

  optional bool installment_payment_serve_enable = 591;

  optional SERVE_MIDDLEMEN serve_middlemen = 592;

  optional INSTALLMENT_PAYMENT_OVERDUE_LIMIT installment_payment_overdue_limit = 593;

  optional INSTALLMENT_PAYMENT_STATE installment_payment_state = 594;

  optional uint32 installment_payment_start_utc_time = 595;

  optional uint32 installment_payment_overdue_limit_utc_time = 596;

  optional uint32 cms_soc_cali_state = 756;

  optional uint32 plug_in_info_pv_vol_low_flag = 1264;

  optional uint32 plug_in_info_pv_weak_source_flag = 1265;
}

message ReqTouStrategy {
  uint32 req_state = 1;
}

message DevRequest {
  uint32 dev_utc_time = 1;

  float dev_utc_timezone = 2;

  optional ReqTouStrategy require_tou_strategy = 4;

  optional ReqIntelligentSchedule require_intelligent_schedule = 11;

  optional bool require_storm_pattern_open_flag = 12;
}

message DevRequestAck {
  uint32 request_id = 1;

  uint32 require_ok = 2;
}

message TimeTaskSpecialSet {
  optional uint32 bypass_dsg_en = 1;

  optional uint32 ac_in_ban = 2;

  optional uint32 chg_pfc_set_watts = 3;
}

enum SaveWorkMode {
  SAVEMODE_NONE = 0;

  SAVEMODE_SELFUSE = 1;

  SAVEMODE_TIME = 2;

  SAVEMODE_TOU = 3;
}

enum Access5p8InputType {
  IN_IDLE = 0;

  IN_AC_EV = 1;

  IN_PD303 = 2;

  IN_L14_TRANS = 3;
}

enum Access5p8OutputType {
  OUT_IDLE = 0;

  OUT_PARALLEL_BOX = 1;

  OUT_PD303 = 2;
}

enum Iot4GErrCode {
  MODEM_ERR_NONE = 0;

  MODEM_ERR_SIM_NOT_INSERTED = 1;

  MODEM_ERR_PIN_REQUIRED = 2;

  MODEM_ERR_PUK_REQUIRED = 3;

  MODEM_ERR_SIM_ERROR = 4;

  MODEM_ERR_DISABLE = 5;

  MODEM_ERR_NOT_OPERATOR = 6;

  MODEM_ERR_USB_DISCONNECT = 7;

  MODEM_ERR_UNKNOWN_DEVICE = 8;

  MODEM_ERR_CTL_ERROR = 9;
}

enum REG_STATE {
  REG_OPERATOR_NOT_SEARCH = 0;

  REG_REGISTERED = 1;

  REG_SEARCHING = 2;

  REG_REFUSES = 3;

  REG_UNKNOW = 4;

  REG_ROAMING_REGISTERED = 5;
}

enum MODEM_RAT {
  RAT_NONE = 0;

  RAT_2G = 2;

  RAT_3G = 3;

  RAT_4G = 4;
}

enum SERVE_MIDDLEMEN {
  SERVE_MIDDLEMEN_NONE = 0;

  SERVE_MIDDLEMEN_SUNNOVA = 1;
}

enum INSTALLMENT_PAYMENT_STATE {
  INSTALLMENT_PAYMENT_STATE_WAIT_FOT_ACTIVATE = 0;

  INSTALLMENT_PAYMENT_STATE_ACTIVATED = 1;

  INSTALLMENT_PAYMENT_STATE_OVERDUE = 2;

  INSTALLMENT_PAYMENT_STATE_SETTLE = 3;

  INSTALLMENT_PAYMENT_STATE_MANUAL_LOCKDOWN = 4;
}

enum INSTALLMENT_PAYMENT_OVERDUE_LIMIT {
  INSTALLMENT_PAYMENT_OVERDUE_LIMIT_NONE = 0;

  INSTALLMENT_PAYMENT_OVERDUE_LIMIT_CLOSE_OUTPUT = 1;
}

enum TIME_TASK_MODE {
  TIME_TASK_MODE_RESV = 0;

  TIME_TASK_MODE_PER_WEEK = 1;

  TIME_TASK_MODE_ONCE = 2;
}

enum TIME_TASK_TYPE {
  TIME_TASK_TYPE_AC_CHG = 0;

  TIME_TASK_TYPE_AC_DSG = 1;

  TIME_TASK_TYPE_AC2_DSG = 2;

  TIME_TASK_TYPE_DC_CHG = 3;

  TIME_TASK_TYPE_DC2_CHG = 4;

  TIME_TASK_TYPE_DC_DSG = 5;

  TIME_TASK_TYPE_OIL_ON = 6;

  TIME_TASK_TYPE_OIL_OFF = 7;

  TIME_TASK_TYPE_USB_CHG = 8;

  TIME_TASK_TYPE_USB_DSG = 9;

  TIME_TASK_TYPE_AC_BYPASS = 10;

  TIME_TASK_TYPE_AC_DSG_ONLY = 11;

  TIME_TASK_TYPE_SHARING_SOC = 12;

  TIME_TASK_TYPE_POWER_ON = 13;

  TIME_TASK_TYPE_POWER_OFF = 14;

  TIME_TASK_TYPE_THERMOSTATIC = 15;

  TIME_TASK_TYPE_COOLING = 16;

  TIME_TASK_TYPE_HEATING = 17;

  TIME_TASK_TYPE_VENTING = 18;

  TIME_TASK_TYPE_DEHUMIDIFYING = 19;

  TIME_TASK_TYPE_LOAD_CTRL_OFF = 20;

  TIME_TASK_TYPE_LOAD_CTRL_ON = 21;

  TIME_TASK_TYPE_LOAD_CTRL_GRID = 22;

  TIME_TASK_TYPE_LOAD_CTRL_BACKUP = 23;

  TIME_TASK_TYPE_AC_DSG_SELF = 24;

  TIME_TASK_TYPE_EV_CHG = 25;
}

enum TIME_TASK_DETAIL_TYPE {
  TIME_TASK_DETAIL_IDLE = 0;

  TIME_TASK_DETAIL_POW = 1;

  TIME_TASK_DETAIL_TEMP = 2;

  TIME_TASK_DETAIL_LEVEL = 3;
}

enum EV_CHG_MODE {
  EV_CHG_MODE_NULL = 0;

  EV_CHG_MODE_REDUNDANCY_PV = 1;

  EV_CHG_MODE_ENERGY_SAVE = 2;

  EV_CHG_MODE_PLUG_PLAY = 3;
}
