syntax = "proto3";

package google.protobuf;

option csharp_namespace = "Google.Protobuf.WellKnownTypes";

option go_package = "google.golang.org/protobuf/types/known/sourcecontextpb";

option java_multiple_files = true;

option java_outer_classname = "SourceContextProto";

option java_package = "com.google.protobuf";

option objc_class_prefix = "GPB";

message SourceContext {
  string file_name = 1;
}
