syntax = "proto3";

message plug_ack_message {
  uint32 ack = 1;
}

message plug_heartbeat_pack {
  optional int32 err_code = 1;

  optional int32 warn_code = 2;

  optional uint32 country = 3;

  optional uint32 town = 4;

  optional int32 max_cur = 5;

  optional int32 temp = 6;

  optional int32 freq = 7;

  optional int32 current = 8;

  optional int32 volt = 9;

  optional int32 watts = 10;

  optional bool switch_sta = 11;

  optional int32 brightness = 12;

  optional int32 max_watts = 13;

  optional int32 heartbeat_frequency = 14;

  optional int32 mesh_enable = 15;

  optional uint32 reset_reason = 16;

  optional uint32 rtc_reset_reason = 17;

  optional uint32 reset_count = 18;

  optional uint32 run_time = 19;

  optional uint32 lan_state = 20;

  optional uint32 stack_free = 21;

  optional uint32 stack_min_free = 22;

  optional uint32 mesh_id = 23;

  optional uint32 mesh_layel = 24;

  optional uint32 self_mac = 25;

  optional uint32 parent_mac = 26;

  optional int32 ota_dl_err = 27;

  optional int32 ota_dl_tls_err = 28;

  optional int32 sta_ip_addr = 29;

  optional int32 matter_fabric = 30;

  optional int32 gene_num = 31;

  optional int32 cons_num = 32;

  optional int32 gene_watt = 33;

  optional int32 cons_watt = 34;

  optional int32 wifi_err = 35;

  optional int32 wifi_err_time = 36;

  optional int32 mqtt_err = 37;

  optional int32 mqtt_err_time = 38;

  optional int32 self_ems_switch = 39;

  optional int32 parent_wifi_rssi = 40;

  optional int32 insights_switch = 41;

  optional int32 rssi_threshold = 42;

  optional int32 rssi_variance = 43;

  optional uint32 utc_time = 44;

  optional int32 time_zone = 45;

  optional int32 dst_time = 46;
}

message plug_switch_message {
  bool plug_switch = 1;
}

message brightness_pack {
  int32 brightness = 1;
}

message max_cur_pack {
  int32 max_cur = 1;
}

message max_watts_pack {
  int32 max_watts = 1;
}

message plug_power_item {
  uint32 timestamp = 1;

  sint32 timezone = 2;

  uint32 plug_power = 3;
}

message plug_power_pack {
  uint32 sys_seq = 1;

  repeated plug_power_item sys_power_stream = 2;
}

message plug_power_pack_ack {
  uint32 sys_seq = 1;
}

message plug_led_test_pack {
  uint32 led_test_mode = 1;
}

message plug_calibration_pack {
  uint32 real_current = 1;

  uint32 real_watt = 2;

  uint32 real_volt = 3;
}

message plug_mesh_ctrl_pack {
  uint32 mesh_enable = 1;
}

message ota_reboot_pack {
  bool ota_reboot = 1;
}

message plug_ems_switch_message {
  uint32 plug_ems_switch = 1;
}
